LFLT-548 Migrate Leaflet Backend to Java 17 and Spring Boot 3  - Minor code improvements and fixing issues caused by the migration  - Changed stack base BOM version to 3.0-r2305.1  - Bumped application version to 2.2.0-dev